--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<style>
+<app-personnage-form></app-personnage-form>
+<!-- <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
     --electric-violet: oklch(53.18% 0.28 296.97);
@@ -116,7 +117,7 @@
     padding-block: 0.375rem;
     border-radius: 2.75rem;
     border: 0;
-    transition: background 0.3s ease;
+    transition: background 5s ease;
     font-family: var(--inter-font);
     font-size: 0.875rem;
     font-style: normal;
@@ -127,7 +128,7 @@
   }
 
   .pill:hover {
-    background: color-mix(in srgb, var(--pill-accent) 15%, transparent);
+    background: color-mix(in srgb, var(--pill-accent) 55%, transparent);
   }
 
   .pill-group .pill:nth-child(6n + 1) {
@@ -322,7 +323,7 @@
       </div>
     </div>
   </div>
-</main>
+</main> -->
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
