--- a/src/app/personnage-form/stats/stats.component.scss
+++ b/src/app/personnage-form/stats/stats.component.scss
@@ -1,6 +1,6 @@
 .stat-flex-parent-element {
     display: flex;
-    width: 30%;
+    max-width: 580px;
   }
 .stat-flex-child-element {
     flex: 1;
