--- a/src/app/personnage-form/stats/points-vie/points-vie.component.html
+++ b/src/app/personnage-form/stats/points-vie/points-vie.component.html
@@ -1,6 +1,11 @@
-<div class="hp-flex-parent-element hp-border">
-    <div class="hp-flex-child-element">PV :</div>
-    <div class="hp-flex-child-element">{{pvActuels.toString()}}</div>
-    <div class="hp-flex-child-element">/</div>
-    <div class="hp-flex-child-element">{{pvMaxTotal.toString()}}</div>
+<div class="hp-grid-parent-element hp-border">
+    <div class="hp-grid-label">PV :</div>
+    <div class="hp-grid-current hp-current">{{pvActuels}}</div>
+    <div class="hp-grid-separator hp-current">/</div>
+    <div class="hp-grid-total-max hp-current">{{pvMaxTotal.toString()}}</div>
+    <div class="hp-grid-stat-max hp-stat">{{pvMaxStat.toString()}}</div>
+    <div class="hp-grid-plus hp-stat">+</div>
+    <div class="hp-grid-bonus-max hp-stat hp-bonus">{{pvMaxBonus.toString()}}</div>
+
+
 </div>
