--- a/src/app/personnage-form/personnage-form.component.html
+++ b/src/app/personnage-form/personnage-form.component.html
@@ -4,7 +4,7 @@
         <li>Nom : {{personnage.nom}}</li>
         <li>Age : {{personnage.age}} ans</li>
         <li>Taille : {{personnage.taille}} cm</li>
-        <li>Classe : {{personnage.job.name}}</li>
+        <li>Classe : {{personnage.job.displayName}}</li>
         <li>Niveau : {{personnage.niveau}}</li>
     </ul>
     <p>Stats :</p>
@@ -24,11 +24,15 @@
       [disabled]="personnage.niveau >= personnage.job.niveauMax">
         Niveau +
     </button>
-    <div>
-        
-        <select>
-            <option *ngFor="let job of personnage.job.jobsSuivants">{{job.displayName}}</option>
+    <section class="container">
+        <select [(ngModel)]="nextJob">
+            <option *ngFor="let job of personnage.job.jobsSuivants" [ngValue]="job">{{job.displayName}}</option>
         </select>
-    </div>
+    </section>
+    <button name="changeJob"
+        (click)="onChangeJobCLick()"
+        [disabled]="personnage.niveau<personnage.job.niveauMax || !nextJob">
+        Changer Job
 
+    </button>
 </section>
