--- a/src/app/personnage-form/stats/stat-simple/stat-simple.component.html
+++ b/src/app/personnage-form/stats/stat-simple/stat-simple.component.html
@@ -1,8 +1,8 @@
 <form>
-    <div class="flex-parent-element bottom-border">
-        <div class="flex-child-element">{{statName}} : </div>
-        <div class="flex-child-element">{{mainStat?.toString()}}</div>
-        <div class="permanent-boost" *ngIf="(permanentBonus)">+ {{permanentBonus.toString()}}</div><div class="bonus-placeholder" *ngIf="(!permanentBonus)">&nbsp;</div>
-        <div class="item-boost" *ngIf="(itemStatBonus)">+ {{itemStatBonus.toString()}}</div><div class="bonus-placeholder" *ngIf="(!itemStatBonus)">&nbsp;</div>
+    <div class="stat-grid-parent-element bottom-border">
+        <div class="stat-grid-name margin">{{statName}} : </div>
+        <div class="stat-grid-main margin">{{mainStat?.toString()}}</div>
+        <div class="stat-grid-bonus margin" *ngIf="(permanentBonus)">+{{permanentBonus.toString()}}</div>
+        <div class="stat-grid-item margin" *ngIf="(itemStatBonus)">+{{itemStatBonus.toString()}}</div>
     </div>
 </form>
