--- a/src/app/personnage-form/inventaire/inventaire.component.html
+++ b/src/app/personnage-form/inventaire/inventaire.component.html
@@ -1,1 +1,13 @@
-<p>inventaire works!</p>
+<section class="inventory-container">
+ <h3>Equipement :</h3>
+ <app-objet [(objet)]="inventaire.arme" ></app-objet>
+ <app-objet></app-objet>
+ <h3>Objets :</h3>
+ <app-objet></app-objet>
+ <app-objet></app-objet>
+ <app-objet></app-objet>
+ <app-objet></app-objet>
+ <app-objet></app-objet>
+ <app-objet></app-objet>
+ <app-objet></app-objet>
+</section>
