--- a/src/app/personnage-form/personnage-form.component.html
+++ b/src/app/personnage-form/personnage-form.component.html
@@ -1,39 +1,36 @@
 <section class="container">
-    <h1>Personnage :</h1>
-    <ul>
-        <li>Nom : {{personnage.nom}}</li>
-        <li>Age : {{personnage.age}} ans</li>
-        <li>Taille : {{personnage.taille}} cm</li>
-        <li>Classe : {{personnage.job.displayName}}</li>
-        <li>Niveau : {{personnage.niveau}}
-            <button 
-              class="margin-left"
-              name="levelUp" 
-              (click)="onLevelUpClick()" 
-              [disabled]="personnage.niveau >= personnage.job.niveauMax">
-                Niveau +
-            </button></li>
-    </ul>
-    <p>Stats :</p>
-    <app-points-vie
-        [(pvActuels)]="personnage.pVActuels" 
-        [pvMaxStat]="personnage.statsActuelles.pointsVie" 
-        [pvMaxBonus]="personnage.permanentBoosts.pointsVie">
-    </app-points-vie>
-    <app-stats 
-        [permanentStats]="personnage.statsActuelles"
-        [permanentBoosts]="personnage.permanentBoosts"
-        [itemBonus]="personnage.inventaire.defensif?.bonusStats">
-    </app-stats>
-    <div *ngIf="personnage.job.jobsSuivants.length >0">
-        <select [(ngModel)]="nextJob">
-            <option *ngFor="let job of personnage.job.jobsSuivants" [ngValue]="job">{{job.displayName}}</option>
-        </select>
-        <button
-          name="changeJob"
-          (click)="onChangeJobCLick()"
-          [disabled]="personnage.niveau<personnage.job.niveauMax || !nextJob || !personnage.job.jobsSuivants.length">
-            Changer Job
-        </button>
-    </div>
+    <section class="stats-container">
+        <h1>Personnage :</h1>
+        <ul>
+            <li>Nom : {{personnage.nom}}</li>
+            <li>Age : {{personnage.age}} ans</li>
+            <li>Taille : {{personnage.taille}} cm</li>
+            <li>Classe : {{personnage.job.displayName}}</li>
+            <li>Niveau : {{personnage.niveau}}
+                <button class="margin-left" name="levelUp" (click)="onLevelUpClick()"
+                    [disabled]="personnage.niveau >= personnage.job.niveauMax">
+                    Niveau +
+                </button>
+            </li>
+        </ul>
+        <p>Stats :</p>
+        <app-points-vie [(pvActuels)]="personnage.pVActuels" [pvMaxStat]="personnage.statsActuelles.pointsVie"
+            [pvMaxBonus]="personnage.permanentBoosts.pointsVie">
+        </app-points-vie>
+        <app-stats [permanentStats]="personnage.statsActuelles" [permanentBoosts]="personnage.permanentBoosts"
+            [itemBonus]="personnage.inventaire.defensif?.bonusStats">
+        </app-stats>
+        <div *ngIf="personnage.job.jobsSuivants.length >0">
+            <select [(ngModel)]="nextJob">
+                <option *ngFor="let job of personnage.job.jobsSuivants" [ngValue]="job">{{job.displayName}}</option>
+            </select>
+            <button name="changeJob" (click)="onChangeJobCLick()"
+                [disabled]="personnage.niveau<personnage.job.niveauMax || !nextJob || !personnage.job.jobsSuivants.length">
+                Changer Job
+            </button>
+        </div>
+    </section>
+    <app-inventaire [(inventaire)]="personnage.inventaire">
+
+    </app-inventaire>
 </section>
