--- a/src/app/personnage-form/stats/stats.component.scss
+++ b/src/app/personnage-form/stats/stats.component.scss
@@ -6,10 +6,10 @@
   }
 
 .stat-grid-left{
-  grid-area: "a";
+  grid-area: a;
   margin: 2px;
 }
 .stat-grid-right{
-  grid-area: "b";
+  grid-area: b;
   margin: 2px;
 }
