--- a/src/app/personnage-form/inventaire/objet/objet.component.scss
+++ b/src/app/personnage-form/inventaire/objet/objet.component.scss
@@ -1,8 +1,78 @@
-.object-container{
+.objet-container{
     height: 50px;
     min-width: 500px;
+    max-width: 500px;
     border : 2px;
     margin: 2px;
     border-style: solid;
     border-image: linear-gradient(90deg,rgb(44, 218, 209), rgb(241, 165, 248)) 1;
+    display: grid;
+    grid-template-areas: 
+        "a b c d";
+    grid-template-columns: 1fr 3fr 2fr 2fr;
+}
+
+.objet-type{
+    grid-area: a;
+    justify-self: center;
+    align-self: center;
+}
+
+.objet-nom{
+    grid-area: b;
+    justify-self: left;
+    align-self: center;
+}
+
+.arme-degats{
+    grid-area: c;
+    display: grid;
+    grid-template-areas:
+        "e g"
+        "f h";
+    gap: 5px;
+    grid-template-rows: 20px 20px ;
+    grid-template-columns: 20px ;
+    align-self:center;
+    justify-self: center;
+}
+.arme-degats-principal{
+    width: 90%;
+    height: 90%;
+    grid-area: e;
+    justify-self: left;
+    align-self: center;
+}
+.arme-degats-principal-texte{
+    grid-area: g;
+    justify-self: left;
+    align-self: center;
+}
+.arme-degats-secondaire{
+    width: 90%;
+    height: 90%;
+    grid-area: f;
+    justify-self: left;
+    align-self: center;
+}
+.arme-degats-secondaire-texte{
+    grid-area: h;
+    justify-self: left;
+    align-self: center;
+}
+.arme-degats-principal-seul{
+    justify-self: left;
+    align-self: center;
+}
+
+.objet-defensif-effet{
+    grid-area: d;
+    justify-self: left;
+    align-self: center;
+}
+
+.objet-type-icon{
+    border: 2px;
+    border-radius: 5px;
+    border-style: groove;
 }
