--- a/src/app/personnage-form/stats/stat-simple/stat-simple.component.scss
+++ b/src/app/personnage-form/stats/stat-simple/stat-simple.component.scss
@@ -3,7 +3,7 @@
   max-width: 490px;
   grid-template-areas: 
     "a b c d";
-    grid-template-columns: 50% 25% 12.5% 12.5%;
+    grid-template-columns: 4fr 2fr 1fr 1fr;
 }
 
   .margin{
@@ -11,25 +11,25 @@
   }
 
   .stat-grid-name {
-    grid-area: "a";
+    grid-area: a;
     justify-content: left;
     align-content: center;
   }
   
   .stat-grid-main {
-    grid-area: "b";
+    grid-area: b;
     justify-self: center;
     align-content: center;
   }
 
   .stat-grid-bonus {
-    grid-area: "c";
+    grid-area: c;
     justify-self: center;
     align-content: center;
   }
 
   .stat-grid-item {
-    grid-area: "d";
+    grid-area: d;
     justify-self: center;
     align-content: center;
   }
